# Logging

./: CMakeCache.txt  CMakeLists.txt  Logging  Makefile  cmake_install.cmake  logging  main.cpp
src/: logging.cpp  settings.ini
